# github-trending-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_date_utilis.py  test_formatter.py  test_github_client.py
trending_repos/: cli.py  date_utils.py  formatter.py  github_client.py
